修复多个lottieLayer动画控制只对最后一个生效的bug

--- a/lottie-framer-demo.framer/framer/config.json
+++ b/lottie-framer-demo.framer/framer/config.json
@@ -7,7 +7,7 @@
   "propertyPanelToggleStates" : {
     "Filters" : false
   },
-  "deviceType" : "apple-iphone-5s-silver",
+  "deviceType" : "apple-iphone-5s-space-gray",
   "projectId" : "E28DA7C3-33C0-4F41-A162-E41283508CC0",
   "deviceOrientation" : 0,
   "selectedHand" : "",
